Resolve HTS title overlap

--- a/styles/hts.css
+++ b/styles/hts.css
@@ -26,7 +26,7 @@
 
 @media only screen and (max-width: 1920px) {
     #hts .title{
-      font-size: calc(0.5em + 7.5vw);
+      font-size: calc(0.5em + 7vw);
     }
     #hts .subtitle{
       font-size: calc(0.5em + 5.5vw);
